--- a/irx/source/secrsif/Makefile
+++ b/irx/source/secrsif/Makefile
@@ -6,25 +6,9 @@
 # Licenced under Academic Free License version 2.0
 # Review ps2sdk README & LICENSE files for further details.
 #
-# $Id$
+IOP_BIN  = secrsif.irx
+IOP_OBJS = secrsif.o imports.o exports.o
 
-IOP_OBJS_DIR = obj/
-IOP_BIN_DIR = bin/
-IOP_SRC_DIR = src/
-IOP_INC_DIR = include/
-
-IOP_BIN  = bin/secrsif.irx
-IOP_OBJS = obj/secrsif.o obj/imports.o obj/exports.o
-
-IOP_INCS += -I$(IOP_INC_DIR) -I$(PS2SDKSRC)/iop/kernel/include -I$(PS2SDKSRC)/iop/system/sio2log/include -I$(PS2SDKSRC)/common/include -I$(IOP_SRC_DIR)/include
-IOP_CFLAGS += -Wall -fno-builtin -O2 -G0 -mno-check-zero-division
-IOP_LDFLAGS += -s
-
-all: $(IOP_OBJS_DIR) $(IOP_BIN_DIR) $(IOP_BIN)
-
-clean:
-	rm -f -r $(IOP_OBJS_DIR) $(IOP_BIN_DIR)
-
-include $(PS2SDKSRC)/Defs.make
-include $(PS2SDKSRC)/iop/Rules.make
-include $(PS2SDKSRC)/iop/Rules.release
+include $(PS2SDK)/Defs.make
+include ../Rules.bin.make
+include ../Rules.make
